package Observer;

public interface Subscriber {
    void notify(Object o);
    String getContact();
}
